--- a/userdashboard.html
+++ b/userdashboard.html
@@ -146,51 +146,51 @@ const pages = {
       </thead>
       <tbody>
         <tr><td>Takoyaki store</td><td>✅ Completed</td><td>Gacusan, Aira Jane</td><td>03 Sep 2025</td><td>3,785</td><td data-stars="5"></td></tr>
-          <tr><td>Sound equipment</td><td>✏ In progress</td><td>Furigay, Neri Jane</td><td>10 Sep 2025</td><td>2,345</td><td data-stars="5"></td></tr>
-          <tr><td>Tables and chairs</td><td>⏳ Not started</td><td>Pena, Rona Mae</td><td>04 Nov 2025</td><td>5,199</td><td data-stars="5"></td></tr>
-          <tr><td>Atan's Meat Shop</td><td>⛔ Blocked</td><td>Dacoco, Jonathan</td><td>12 Mar 2025</td><td>1,870</td><td data-stars="5"></td></tr>
+        <tr><td>Sound equipment</td><td>✏ In progress</td><td>Furigay, Neri Jane</td><td>10 Sep 2025</td><td>2,345</td><td data-stars="5"></td></tr>
+        <tr><td>Tables and chairs</td><td>⏳ Not started</td><td>Pena, Rona Mae</td><td>04 Nov 2025</td><td>5,199</td><td data-stars="5"></td></tr>
+        <tr><td>Atan's Meat Shop</td><td>⛔ Blocked</td><td>Dacoco, Jonathan</td><td>12 Mar 2025</td><td>1,870</td><td data-stars="5"></td></tr>
       </tbody>
     </table>
   `,
   Supply: `
   <h1>Supply Monitoring</h1>
-<input type="text" id="supplySearch" placeholder="Search Supply…" style="margin-bottom:1rem;width:100%;padding:.5rem;">
-<table id="supplyTable">
-<thead>
-<tr>
-<th>Ref No.</th><th>Business Name</th><th>Business Category</th><th>Supplier</th>
-<th>Pick-up</th><th>Drop-off</th><th>Delivery Time</th><th>Report</th>
-<th>Contact No.</th><th>Item Value</th><th>Quality</th><th>Status</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><a href="#" class="ref-link">RPT-001</a></td>
-<td>Daisy Poultry</td><td>MEAT SHOP</td><td>James</td><td>Quezon City</td>
-<td>Las Piñas</td><td>12:00 am - 2:00 pm</td><td>Filed</td>
-<td>0970-567-1136</td><td>₱4,000.00</td><td>★★★★★</td><td>⛔ Delayed</td>
-</tr>
-<tr>
-<td><a href="#" class="ref-link">RPT-002</a></td>
-<td>Takoyaki Supplier</td><td>SUPPLIES SHOP</td><td>Maria</td><td>Makati</td>
-<td>Pasig</td><td>7:00 am - 9:00 am</td><td>None</td>
-<td>0917-888-9999</td><td>₱2,500.00</td><td>★★★★★</td><td>✅ Completed</td>
-</tr>
-<tr>
-<td><a href="#" class="ref-link">RPT-003</a></td>
-<td>Catering Supplies</td><td>CATERING</td><td>Sofia</td><td>Taguig</td>
-<td>Alabang</td><td>10:00 am - 12:00 pm</td><td>None</td>
-<td>0920-555-4444</td><td>₱3,200.00</td><td>★★★★★</td><td>✏ In progress</td>
-</tr>
-<tr>
-<td><a href="#" class="ref-link">RPT-004</a></td>
-<td>Party Rental</td><td>RENTAL SHOP</td><td>Ramon</td><td>Manila</td>
-<td>Mandaluyong</td><td>3:00 am - 5:00 am</td><td>None</td>
-<td>0998-222-3333</td><td>₱5,000.00</td><td>★★★★★</td><td>✅ Completed</td>
-</tr>
-</tbody>
-</table>
-`,
+  <input type="text" id="supplySearch" placeholder="Search Supply…" style="margin-bottom:1rem;width:100%;padding:.5rem;">
+  <table id="supplyTable">
+    <thead>
+      <tr>
+        <th>Ref No.</th><th>Business Name</th><th>Business Category</th><th>Supplier</th>
+        <th>Pick-up</th><th>Drop-off</th><th>Delivery Time</th><th>Report</th>
+        <th>Contact No.</th><th>Item Value</th><th>Quality</th><th>Status</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><a href="#" class="ref-link">RPT-001</a></td>
+        <td>Daisy Poultry</td><td>MEAT SHOP</td><td>James</td><td>Quezon City</td>
+        <td>Muñoz</td><td>12:00 am - 2:00 pm</td><td>Filed</td>
+        <td>0970-567-1136</td><td>₱4,000.00</td><td>★★★★★</td><td>⛔ Delayed</td>
+      </tr>
+      <tr>
+        <td><a href="#" class="ref-link">RPT-002</a></td>
+        <td>Takoyaki Supplier</td><td>SUPPLIES SHOP</td><td>Maria</td><td>Makati</td>
+        <td>Muñoz</td><td>7:00 am - 9:00 am</td><td>None</td>
+        <td>0917-888-9999</td><td>₱2,500.00</td><td>★★★★★</td><td>✅ Completed</td>
+      </tr>
+      <tr>
+        <td><a href="#" class="ref-link">RPT-003</a></td>
+        <td>Catering Supplies</td><td>CATERING</td><td>Sofia</td><td>Taguig</td>
+        <td>Muñoz</td><td>10:00 am - 12:00 pm</td><td>None</td>
+        <td>0920-555-4444</td><td>₱3,200.00</td><td>★★★★★</td><td>✏ In progress</td>
+      </tr>
+      <tr>
+        <td><a href="#" class="ref-link">RPT-004</a></td>
+        <td>Party Rental</td><td>RENTAL SHOP</td><td>Ramon</td><td>Manila</td>
+        <td>Muñoz</td><td>3:00 am - 5:00 am</td><td>None</td>
+        <td>0998-222-3333</td><td>₱5,000.00</td><td>★★★★★</td><td>✅ Completed</td>
+      </tr>
+    </tbody>
+  </table>
+  `,
   Reports: `
     <h1>Reports and Dashboard with AI Analytic</h1>
     <div class="grid">
@@ -203,6 +203,8 @@ const pages = {
         <ul id="complaintsList">
           <li data-ref="RPT-001">Vendor delayed chicken delivery (Ref: RPT-001)</li>
           <li data-ref="RPT-002">Incomplete Takoyaki supplies (Ref: RPT-002)</li>
+          <li data-ref="RPT-003">Catering delivery arrived late (Ref: RPT-003)</li>
+          <li data-ref="RPT-004">Rental items missing on arrival (Ref: RPT-004)</li>
         </ul>
       </div>
       <div class="card">
@@ -216,155 +218,6 @@ const pages = {
   Settings: `<h1>Settings</h1><p>Settings content here...</p>`
 };
 
-function renderStars(td){
-  const rating=parseInt(td.dataset.stars)||0;
-  td.innerHTML="";
-  for(let i=1;i<=5;i++){
-    const star=document.createElement("span");
-    star.className="star"+(i<=rating?" active":"");
-    star.innerHTML="★";
-    star.onclick=()=>{td.dataset.stars=i;renderStars(td);};
-    td.appendChild(star);
-  }
-}
-
-
-function makeTableEditable(tableId, searchId){
-  const table=document.getElementById(tableId);
-  if(!table) return;
-  table.querySelectorAll("td:not([data-stars])").forEach(td=>{
-    td.onclick=()=>{
-      if(td.querySelector("input")) return;
-      const old=td.innerText;
-      const input=document.createElement("input");
-      input.value=old;
-      td.innerHTML=""; td.appendChild(input); input.focus();
-      input.onblur=()=>{td.innerText=input.value||old;};
-      input.onkeydown=(e)=>{if(e.key==="Enter"){input.blur();}};
-    };
-  });
-  table.querySelectorAll("td[data-stars]").forEach(td=>renderStars(td));
-  if(searchId){
-    document.getElementById(searchId).onkeyup=(e)=>{
-      const term=e.target.value.toLowerCase();
-      table.querySelectorAll("tbody tr").forEach(row=>{
-        row.style.display=row.innerText.toLowerCase().includes(term)?"":"none";
-      });
-    };
-  }
-}
-
-
-document.querySelectorAll(".nav-item").forEach(link=>{
-  if(!link.classList.contains("logout-btn")){
-    link.onclick=(e)=>{
-      e.preventDefault();
-      document.querySelectorAll(".nav-item").forEach(l=>l.classList.remove("active"));
-      link.classList.add("active");
-      const page=link.dataset.page;
-      contentArea.innerHTML=pages[page]||`<h1>${page}</h1>`;
-      if(page==="dashboard") initDashboard();
-      if(page==="Vendor") makeTableEditable("vendorTable","vendorSearch");
-      if(page==="Supply") makeTableEditable("supplyTable","supplySearch");
-    };
-  }
-});
-
-document.getElementById("backBtn").onclick=()=>window.history.back();
-document.getElementById("menuBtn").onclick=()=>document.getElementById("sidebar").classList.toggle("open");
-
-
-function openModal(row=null){
-  overlay.style.display="flex"; editingRow=row;
-  if(row){
-    document.getElementById("modalTitle").innerText="Edit Vendor Engagement";
-    document.getElementById("dealInput").value=row.cells[0].innerText;
-    document.getElementById("stageInput").value=row.cells[1].innerText;
-    document.getElementById("valueInput").value=row.cells[4].innerText;
-    document.getElementById("ownerInput").value=row.cells[2].innerText;
-  } else {
-    document.getElementById("modalTitle").innerText="New Vendor Engagement";
-    document.querySelectorAll(".modal input").forEach(i=>i.value="");
-  }
-}
-function closeModal(){overlay.style.display="none";}
-
-
-function attachTaskActions(){
-  const taskList=document.getElementById("taskList"), addTaskBtn=document.getElementById("addTaskBtn");
-  if(!taskList) return;document.querySelectorAll("#taskList li").forEach(li=>{
-    const editIcon=li.querySelector(".edit-icon"),
-          deleteIcon=li.querySelector(".delete-icon");
-    editIcon.onclick=()=>{
-      const newText=prompt("Edit Task", li.firstChild.textContent.trim());
-      if(newText) li.firstChild.textContent=newText+" ";
-    };
-    deleteIcon.onclick=()=>{
-      if(confirm("Delete this task?")) li.remove();
-    };
-  });
-  addTaskBtn.onclick=()=>{
-    const taskName=prompt("Enter new task:");
-    if(taskName){
-      const li=document.createElement("li");
-      li.innerHTML=`<input type="checkbox" /> ${taskName} <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span>`;
-      taskList.appendChild(li);
-      attachTaskActions();
-    }
-  };
-}
-
-
-function initDashboard(){
-  const container=document.getElementById("contentArea");
-  container.innerHTML=pages.dashboard;
-  attachTaskActions();
-  makeTableEditable("vendorEngagementsTable");
-
-  const ctx=document.getElementById("pipelineChart");
-  if(ctx){
-    pipelineChart=new Chart(ctx,{
-      type:"line",
-      data:{
-        labels:["Week 1","Week 2","Week 3","Week 4","Week 5","Week 6"],
-        datasets:[{
-          label:"Supply Chain Flow",
-          data:[10,15,8,20,18,25],
-          borderColor:"#0a53c1",
-          backgroundColor:"rgba(10,83,193,0.2)",
-          fill:true,
-          tension:0.3
-        }]
-      }
-    });
-  }
-}
-
-
-document.getElementById("newBtn").onclick=()=>openModal();
-document.getElementById("saveBtn").onclick=()=>{
-  const table=document.querySelector("#vendorEngagementsTable tbody");
-  if(!table) return;
-  const deal=document.getElementById("dealInput").value,
-        stage=document.getElementById("stageInput").value,
-        value=document.getElementById("valueInput").value,
-        owner=document.getElementById("ownerInput").value,
-        due="Today";
-
-  if(editingRow){
-    editingRow.cells[0].innerText=deal;
-    editingRow.cells[1].innerText=stage;
-    editingRow.cells[2].innerText=owner;
-    editingRow.cells[3].innerText=due;
-    editingRow.cells[4].innerText=value;
-  } else {
-    const row=table.insertRow();
-    row.innerHTML=`<td>${deal}</td><td>${stage}</td><td>${owner}</td><td>${due}</td><td>${value}</td><td data-stars="5"></td>`;
-    renderStars(row.cells[5]);
-  }
-  closeModal();
-};
-  
 function attachRefLinks(){
   document.querySelectorAll(".ref-link").forEach(link=>{
     link.onclick=(e)=>{
@@ -422,7 +275,82 @@ document.querySelectorAll(".nav-item").forEach(link=>{
 document.getElementById("backBtn").onclick=()=>window.history.back();
 document.getElementById("menuBtn").onclick=()=>document.getElementById("sidebar").classList.toggle("open");
 
-initDashboard();
+function initDashboard(){
+  const ctx=document.getElementById("pipelineChart");
+  if(ctx){
+    pipelineChart = new Chart(ctx,{
+      type:"line",
+      data:{
+        labels:["Week 1","Week 2","Week 3","Week 4","Week 5","Week 6"],
+        datasets:[{label:"Deliveries",data:[5,8,6,10,7,9],borderColor:"#0a53c1"}]
+      }
+    });
+  }
+  document.querySelectorAll("[data-stars]").forEach(cell=>{
+    const rating=+cell.dataset.stars||0;
+    cell.innerHTML="";
+    for(let i=1;i<=5;i++){
+      const star=document.createElement("span");
+      star.textContent="★";
+      star.className="star"+(i<=rating?" active":"");
+      star.onclick=()=>{cell.dataset.stars=i;renderPage("dashboard");};
+      cell.appendChild(star);
+    }
+  });
+  const taskList=document.getElementById("taskList");
+  if(taskList){
+    document.querySelectorAll(".edit-icon").forEach(icon=>{
+      icon.onclick=()=>{
+        const li=icon.parentElement;
+        const spanText=li.childNodes[1].textContent.trim();
+        const newTask=prompt("Edit task:",spanText);
+        if(newTask!==null) li.childNodes[1].textContent=" "+newTask+" ";
+      };
+    });
+    document.querySelectorAll(".delete-icon").forEach(icon=>{
+      icon.onclick=()=>icon.parentElement.remove();
+    });
+    document.getElementById("addTaskBtn").onclick=()=>{
+      const task=prompt("New Task:");
+      if(task){
+        const li=document.createElement("li");
+        li.innerHTML=`<input type="checkbox" /> ${task} <span class="edit-icon">✏️</span> <span class="delete-icon">🗑️</span>`;
+        taskList.appendChild(li);
+      }
+    };
+  }
+}
+
+function makeTableEditable(tableId,searchId){
+  const table=document.getElementById(tableId);
+  const search=document.getElementById(searchId);
+  if(search){
+    search.oninput=()=>{
+      const val=search.value.toLowerCase();
+      Array.from(table.tBodies[0].rows).forEach(r=>{
+        r.style.display= r.innerText.toLowerCase().includes(val)?"":"none";
+      });
+    };
+  }
+  table.querySelectorAll("td").forEach(td=>{
+    td.ondblclick=()=>{
+      const old=td.innerText;
+      const input=document.createElement("input");
+      input.value=old;
+      td.innerText="";
+      td.appendChild(input);
+      input.focus();
+      input.onblur=()=>{td.innerText=input.value||old;};
+    };
+  });
+}
+
+function openModal(){overlay.style.display="flex";}
+function closeModal(){overlay.style.display="none";}
+document.getElementById("newBtn").onclick=openModal;
+document.getElementById("saveBtn").onclick=()=>{alert("Saved!");closeModal();};
+
+renderPage("dashboard");
 </script>
 </body>
 </html>
