--- a/admindashboard.html
+++ b/admindashboard.html
@@ -191,7 +191,7 @@ const pages = {
     </tbody>
   </table>
   `,
- Reports: `
+Reports: `
   <h1>Reports and Dashboard with AI Analytic</h1>
   <div class="grid">
     <div class="card">
@@ -200,13 +200,10 @@ const pages = {
     </div>
     <div class="card">
       <h3>Recent Complaints</h3>
-  
-      <ul id="complaintsList" style="display:none;">
-        <li data-ref="RPT-001">Vendor delayed chicken delivery</li>
-        <li data-ref="RPT-002">Incomplete Takoyaki supplies</li>
-        <li data-ref="RPT-003">Catering delivery arrived late</li>
-        <li data-ref="RPT-004">Rental items missing on arrival</li>
-      </ul>
+      <div id="complaintsContainer" style="display:none;">
+        <p id="complaintMessage" style="background:#fce8b2;padding:.5rem;border-radius:6px;"></p>
+      </div>
+
       <select id="complaintSelect" style="margin-top:.5rem;width:100%;padding:.4rem;">
         <option value="">-- Select Complaint Ref No. --</option>
         <option value="RPT-001">RPT-001</option>
@@ -218,12 +215,15 @@ const pages = {
     </div>
     <div class="card">
       <h3>AI Chat Support</h3>
-      <button id="chatNowBtn" class="btn">💬 Chat Now</button>
-      <div id="chatboxContainer"></div>
+      <div id="chatboxContainer" style="border:1px solid #ccc;padding:10px;border-radius:8px;height:200px;overflow:auto;"></div>
+      <div style="margin-top:.5rem;display:flex;gap:.5rem;">
+        <input id="chatInput" type="text" placeholder="Type your question..." style="flex:1;padding:.4rem;border:1px solid #ccc;border-radius:6px;">
+        <button id="chatSendBtn" class="btn">Send</button>
+      </div>
     </div>
   </div>
 `,
-
+  
   Settings: `<h1>Settings</h1><p>Settings content here...</p>`
 };
 
@@ -249,40 +249,79 @@ function initReports(refNo){
     });
   }
 
-  const list=document.getElementById("complaintsList");
+  const complaints={
+    "RPT-001":"Vendor delayed chicken delivery",
+    "RPT-002":"Incomplete Takoyaki supplies",
+    "RPT-003":"Catering delivery arrived late",
+    "RPT-004":"Rental items missing on arrival"
+  };
+
+  const container=document.getElementById("complaintsContainer");
+  const message=document.getElementById("complaintMessage");
   const select=document.getElementById("complaintSelect");
   const viewBtn=document.getElementById("viewComplaintBtn");
-
 
   if(viewBtn){
     viewBtn.onclick=()=>{
       const ref=select.value;
-      if(ref){
-        list.style.display="block"; 
-        renderPage("Reports", ref);
+      if(ref && complaints[ref]){
+        container.style.display="block";
+        message.textContent=`(${ref}) ${complaints[ref]}`;
       } else {
         alert("Please select a complaint Ref No. first.");
       }
     };
   }
 
-  if(refNo){
-    list.style.display="block";
-    document.querySelectorAll("#complaintsList li").forEach(li=>{
-      li.style.fontWeight=(li.dataset.ref===refNo)?"bold":"normal";
-      li.style.background=(li.dataset.ref===refNo)?"#fce8b2":"transparent";
-    });
+
+  if(refNo && complaints[refNo]){
+    container.style.display="block";
+    message.textContent=`(${refNo}) ${complaints[refNo]}`;
     select.value=refNo;
   }
 
-  const chatBtn=document.getElementById("chatNowBtn");
-  if(chatBtn){
-    chatBtn.onclick=()=>{
-      document.getElementById("chatboxContainer").innerHTML=
-        '<div style="border:1px solid #ccc;padding:10px;border-radius:8px;">🤖 Hello! How can I assist you with vendor reports today?</div>';
+-
+  const chatBox=document.getElementById("chatboxContainer");
+  const chatInput=document.getElementById("chatInput");
+  const chatSendBtn=document.getElementById("chatSendBtn");
+
+  function addMessage(sender,text){
+    const div=document.createElement("div");
+    div.style.margin="4px 0";
+    div.innerHTML=`<b>${sender}:</b> ${text}`;
+    chatBox.appendChild(div);
+    chatBox.scrollTop=chatBox.scrollHeight;
+  }
+
+  function botReply(msg){
+    msg=msg.toLowerCase();
+    if(msg.includes("status")){
+      return "📊 Current reports show most vendors are on track, with 2 pending complaints.";
+    }
+    if(msg.includes("performance")){
+      return "✅ Vendor performance is averaging 85%, with rentals leading at 90%.";
+    }
+    if(msg.includes("complaint")){
+      return "⚠️ There are 4 active complaints. Select a Ref No. to view details.";
+    }
+    if(msg.includes("hello")||msg.includes("hi")){
+      return "👋 Hello! How can I assist you today?";
+    }
+    return "🤖 Sorry, I don’t have an answer for that. Try asking about 'status', 'performance', or 'complaints'.";
+  }
+
+  if(chatSendBtn){
+    chatSendBtn.onclick=()=>{
+      const text=chatInput.value.trim();
+      if(text){
+        addMessage("You",text);
+        addMessage("Bot",botReply(text));
+        chatInput.value="";
+      }
     };
   }
 }
+  
 function renderPage(page, refNo=null){
   contentArea.innerHTML=pages[page]||`<h1>${page}</h1>`;
   if(page==="dashboard") initDashboard();
