--- a/admindashboard.html
+++ b/admindashboard.html
@@ -152,6 +152,35 @@ const pages = {
       </tbody>
     </table>
   `,
+
+  Commidity: `
+    <h1>COMMODITY AND PRICE MONITORING</h1>
+<tr>
+<td contenteditable="true">Atan's Meat Shop</td>
+<td contenteditable="true"></td>
+<td contenteditable="true"></td>
+<td contenteditable="true">High</td>
+</tr>
+</tbody>
+</table>
+
+<canvas id="pieChart" width="400" height="200"></canvas>
+
+<div class="card-container">
+<div class="card" onclick="openModal('Takoyaki store')">Takoyaki store<br><button>View Data</button></div>
+<div class="card" onclick="openModal('Sound equipment')">Sound equipment<br><button>View Data</button></div>
+<div class="card" onclick="openModal('Tables and chairs')">Tables and chairs<br><button>View Data</button></div>
+<div class="card" onclick="openModal(`Atan's Meat Shop`)">Atan's Meat Shop<br><button>View Data</button></div>
+</div>
+
+<div id="dataModal" class="modal">
+<div class="modal-content">
+<span class="close" onclick="closeModal()">&times;</span>
+<h3 id="modalTitle"></h3>
+<canvas id="lineChart" width="400" height="200"></canvas>
+</div>
+</div>
+  
   Supply: `
   <h1>Supply Monitoring</h1>
   <input type="text" id="supplySearch" placeholder="Search Supply…" style="margin-bottom:1rem;width:100%;padding:.5rem;">
@@ -235,6 +264,64 @@ function attachRefLinks(){
       renderPage("Reports", ref);
     };
   });
+}
+
+  const ctx = document.getElementById('pieChart').getContext('2d');
+let pieChart = new Chart(ctx, {
+type: 'pie',
+data: getPieData(),
+});
+
+
+function getPieData() {
+const statuses = Array.from(document.querySelectorAll('#commodityTable tbody tr td:nth-child(4)')).map(td => td.innerText.trim());
+let counts = { High: 0, Low: 0, Stable: 0 };
+statuses.forEach(status => {
+if (counts[status] !== undefined) counts[status]++;
+});
+return {
+labels: ['High', 'Low', 'Stable'],
+datasets: [{
+data: [counts.High, counts.Low, counts.Stable],
+backgroundColor: ['#9fff80', '#ff4d4d', '#ffd966']
+}]
+};
+}
+
+document.querySelectorAll('#commodityTable td').forEach(cell => {
+cell.addEventListener('input', () => {
+pieChart.data = getPieData();
+pieChart.update();
+});
+});
+
+
+function openModal(businessName) {
+document.getElementById('modalTitle').innerText = businessName + ' - Past 6 Months';
+document.getElementById('dataModal').style.display = 'flex';
+
+
+const ctxLine = document.getElementById('lineChart').getContext('2d');
+if (window.lineChart) window.lineChart.destroy();
+
+
+window.lineChart = new Chart(ctxLine, {
+type: 'line',
+data: {
+labels: ['Month 1', 'Month 2', 'Month 3', 'Month 4', 'Month 5', 'Month 6'],
+datasets: [{
+label: 'Price Trend',
+data: Array.from({length: 6}, () => Math.floor(Math.random() * 100)),
+borderColor: '#007bff',
+fill: false
+}]
+}
+});
+}
+
+
+function closeModal() {
+document.getElementById('dataModal').style.display = 'none';
 }
 
 function initReports(refNo){
